<?xml version="1.0"?>
<package>
  <name>staubli_val3_driver</name>
  <version>0.0.0</version>
  <description>
    <p>
      ROS-Industrial VAL3 driver for the Staubli RX160 (and variants).
    </p>
    <p>
      This package contains the ROS-I compliant driver, implemented in VAL3
      language, and launch files required to communicate with Staubli 6-axis
      robot arms. This driver has been tested with the Staubli CS8 controller
      and the RX160L robot arm.
    </p>
    <p>
      Before using the provided driver and any of the configuration files
      included in this package, be sure to check they are correct for the
      particular robot model and configuration you intend to use them with.
    </p>
  </description>

  <author email="murilo.martins@ocado.com">Murilo Martins (Ocado Technology)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/staubli_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli_experimental</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>industrial_robot_client</run_depend>
  <run_depend>staubli_resources</run_depend>
  <run_depend>staubli_rx160_support</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>
